--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,70 @@
     <link rel="stylesheet" href="scss/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+
+                <div class="header__logo">
+                    <a href="#">
+                        <img src="images/dist/logo.png" alt="">
+                    </a>
+                </div>
+
+                <div class="header__box">
+
+                    <div class="header__help">
+                        <a class="header__help-btn" href="#">Need help?</a> Talk to an expert: <a class="header__help-phone"   href="tel:61383766284">+61 3 8376 6284</a>
+                    </div>
+
+                    <div class="header__buttons">
+                        <a class="btn-login" href="#">Login</a>
+                        <a class="btn-register" href="#">Register</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="header__bottom">
+            <div class="container">
+                <nav class="header__navigation">
+                    <ul class="menu">                                                                                        
+                        <li class="menu-item">
+                            <a href="#">Home</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#">About</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#">WordPress</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#">Joomla</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#">PSD</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#">Plugins</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#">Components</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#">Pages</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#">Contact</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="#">Help</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
 
 
 
