--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,27 @@
             </div>
         </div>
     </header>
+    <section class="search">
+        <div class="container">
+            <div class="search__inner">
+                <h1 class="search__inner-title">
+                    Welcome To Foxtar Market Place!
+                </h1>
+                <p class="search__inner-text">
+                    Premium WordPress Themes, Web Templates and Many More ...
+                </p>
+                <div class="search__inner-form">
+                    <form class="form" action="#">
+                        <input class="form__input" type="text" placeholder="Search Your Keywords . . ." required>
+                        <button class="form__btn" type="submit">
+                            <img src="images/src/search.png" alt="">
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
 
+    </section>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
