new blog adventeges and new blog author

--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,7 @@
 
     </section>
 
-    <div class="prodcut">
+    <section class="prodcut">
         <div class="container__fluid">
             <div class="prodcut__inner">
                 <h2 class="prodcut__title">
@@ -339,7 +339,7 @@
                 <button type="button" class="prodcut__buttons-right" data-filter=".Joomla">Popular Items</button>
             </div>
         </div>
-    </div>
+    </section>
 
 
 
@@ -801,6 +801,125 @@
                 </div>
 
             </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="adventeges">
+        <div class="container">
+
+            <div class="prodcut__title adventeges__title">
+                Why You Choose Foxtar Market Place?
+            </div>
+
+            <div class="adventeges__inner">
+                <div class="adventeges__item">
+                    <div class="adventeges__item-icon">
+
+                        <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                width="401.998px" height="401.998px" viewBox="0 0 401.998 401.998" style="enable-background:new 0 0 401.998 401.998;"
+                                xml:space="preserve">
+                            <g>
+                                <path d="M357.45,190.721c-5.331-5.33-11.8-7.993-19.417-7.993h-9.131v-54.821c0-35.022-12.559-65.093-37.685-90.218
+                                    C266.093,12.563,236.025,0,200.998,0c-35.026,0-65.1,12.563-90.222,37.688C85.65,62.814,73.091,92.884,73.091,127.907v54.821
+                                    h-9.135c-7.611,0-14.084,2.663-19.414,7.993c-5.33,5.326-7.994,11.799-7.994,19.417V374.59c0,7.611,2.665,14.086,7.994,19.417
+                                    c5.33,5.325,11.803,7.991,19.414,7.991H338.04c7.617,0,14.085-2.663,19.417-7.991c5.325-5.331,7.994-11.806,7.994-19.417V210.135
+                                    C365.455,202.523,362.782,196.051,357.45,190.721z M274.087,182.728H127.909v-54.821c0-20.175,7.139-37.402,21.414-51.675
+                                    c14.277-14.275,31.501-21.411,51.678-21.411c20.179,0,37.399,7.135,51.677,21.411c14.271,14.272,21.409,31.5,21.409,51.675V182.728
+                                    z"/>
+                            </g>
+                        </svg>
+
+                    </div>
+                    <div class="adventeges__item-title">
+                        Easily Buy & Sell 
+                    </div>
+                    <p class="adventeges__item-text">
+                        Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+                    </p>
+                </div>
+
+                <div class="adventeges__item">
+                    <div class="adventeges__item-icon">
+
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                            <g>
+                                <g>
+                                    <path d="M478.609,99.726H441.34c4.916-7.78,8.16-16.513,9.085-25.749C453.38,44.46,437.835,18,411.37,6.269
+                                        c-24.326-10.783-51.663-6.375-71.348,11.479l-47.06,42.65c-9.165-10.024-22.34-16.324-36.962-16.324
+                                        c-14.648,0-27.844,6.32-37.011,16.375l-47.12-42.706C152.152-0.111,124.826-4.502,100.511,6.275
+                                        C74.053,18.007,58.505,44.476,61.469,73.992c0.927,9.229,4.169,17.958,9.084,25.734H33.391C14.949,99.726,0,114.676,0,133.117
+                                        v50.087c0,9.22,7.475,16.696,16.696,16.696h478.609c9.22,0,16.696-7.475,16.696-16.696v-50.087
+                                        C512,114.676,497.051,99.726,478.609,99.726z M205.913,94.161v5.565H127.37c-20.752,0-37.084-19.346-31.901-40.952
+                                        c2.283-9.515,9.151-17.626,18.034-21.732c12.198-5.638,25.71-3.828,35.955,5.445l56.469,51.182
+                                        C205.924,93.834,205.913,93.996,205.913,94.161z M417.294,69.544c-1.244,17.353-16.919,30.184-34.316,30.184h-76.891v-5.565
+                                        c0-0.197-0.012-0.392-0.014-0.589c12.792-11.596,40.543-36.748,55.594-50.391c8.554-7.753,20.523-11.372,31.587-8.072
+                                        C409.131,39.847,418.455,53.349,417.294,69.544z"/>
+                                </g>
+                            </g>
+                            <g>
+                                <g>
+                                    <path d="M33.391,233.291v244.87c0,18.442,14.949,33.391,33.391,33.391h155.826V233.291H33.391z"/>
+                                </g>
+                            </g>
+                            <g>
+                                <g>
+                                    <path d="M289.391,233.291v278.261h155.826c18.442,0,33.391-14.949,33.391-33.391v-244.87H289.391z"/>
+                                </g>
+                            </g>
+                        </svg>
+
+                    </div>
+                    <div class="adventeges__item-title">
+                        Easily Buy & Sell 
+                    </div>
+                    <p class="adventeges__item-text">
+                        Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+                    </p>
+                </div>
+
+                <div class="adventeges__item">
+                    <div class="adventeges__item-icon">
+                        <svg version="1.1" id="Capa_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                            <g>
+                                <g>
+                                    <path d="M474.644,74.27C449.391,45.616,414.358,29.836,376,29.836c-53.948,0-88.103,32.22-107.255,59.25
+                                        c-4.969,7.014-9.196,14.047-12.745,20.665c-3.549-6.618-7.775-13.651-12.745-20.665c-19.152-27.03-53.307-59.25-107.255-59.25
+                                        c-38.358,0-73.391,15.781-98.645,44.435C13.267,101.605,0,138.213,0,177.351c0,42.603,16.633,82.228,52.345,124.7
+                                        c31.917,37.96,77.834,77.088,131.005,122.397c19.813,16.884,40.302,34.344,62.115,53.429l0.655,0.574
+                                        c2.828,2.476,6.354,3.713,9.88,3.713s7.052-1.238,9.88-3.713l0.655-0.574c21.813-19.085,42.302-36.544,62.118-53.431
+                                        c53.168-45.306,99.085-84.434,131.002-122.395C495.367,259.578,512,219.954,512,177.351
+                                        C512,138.213,498.733,101.605,474.644,74.27z M309.193,401.614c-17.08,14.554-34.658,29.533-53.193,45.646
+                                        c-18.534-16.111-36.113-31.091-53.196-45.648C98.745,312.939,30,254.358,30,177.351c0-31.83,10.605-61.394,29.862-83.245
+                                        C79.34,72.007,106.379,59.836,136,59.836c41.129,0,67.716,25.338,82.776,46.594c13.509,19.064,20.558,38.282,22.962,45.659
+                                        c2.011,6.175,7.768,10.354,14.262,10.354c6.494,0,12.251-4.179,14.262-10.354c2.404-7.377,9.453-26.595,22.962-45.66
+                                        c15.06-21.255,41.647-46.593,82.776-46.593c29.621,0,56.66,12.171,76.137,34.27C471.395,115.957,482,145.521,482,177.351
+                                        C482,254.358,413.255,312.939,309.193,401.614z"/>
+                                </g>
+                            </g>
+                        </svg>
+                    </div>
+                    <div class="adventeges__item-title">
+                        Easily Buy & Sell 
+                    </div>
+                    <p class="adventeges__item-text">
+                        Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the industry's standaum.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="author">
+        <div class="author__box">
+            <div class="author__title">
+                Over <span>20,000</span> Author Are Involved Here!
+            </div>
+            
+            <div class="author__link">
+                <a href="#">Become A Author</a>
             </div>
         </div>
     </section>
