--- a/app/index.html
+++ b/app/index.html
@@ -924,6 +924,47 @@
         </div>
     </section>
 
+    <section class="work">
+        <div class="container">
+            <div class="prodcut__title work__title">
+                Free Monthly Tutorials To Help You With Your Project 
+            </div>
+            <div class="work__inner">
+
+                <div class="work__inner-item">
+
+                    <div class="work__inner-img">
+                        <img class="work-img" src="images/src/work-1.jpg" alt="">
+                    </div>
+                    <div class="work__inner-title">
+                        Web Design Tutorials
+                    </div>
+                </div>
+
+                <div class="work__inner-item">
+
+                    <div class="work__inner-img">
+                        <img class="work-img" src="images/src/work-2.jpg" alt="">
+                    </div>
+                    <div class="work__inner-title">
+                        WordPress Tutorials
+                    </div>
+                </div>
+
+                <div class="work__inner-item">
+
+                    <div class="work__inner-img">
+                        <img class="work-img" src="images/src/work-3.jpg" alt="">
+                    </div>
+                    <div class="work__inner-title">
+                        HTML & CSS Tutorials
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/slick.min.js"></script>
