--- a/app/index.html
+++ b/app/index.html
@@ -965,6 +965,136 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+
+                <div class="footer__inner-item footer__blog-1">
+                    <div class="footer__inner-title">
+                        About Company
+                    </div>
+                    <p class="footer__inner-text">
+                        Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit amet urna iat.Praesent vel rutrum purus. 
+                    </p>
+
+                    <p class="footer__inner-map">
+                        PO Box 16122 Collins Street West Victoria 8007 Australia
+                    </p>
+                    <a class="footer__inner-phone" href="tel:61383766284">
+                        +61 3 8376 6284
+                    </a>
+
+                </div>
+
+                <div class="footer__inner-item footer__blog-2">
+                    <div class="footer__inner-title">
+                        Join Our Community 
+                    </div>
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">
+                                Home
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">
+                                Forums
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">
+                                Become an Author
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">
+                                Community Meetups
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">
+                                Become an Affiliate
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer__inner-item footer__blog-3">
+                    <div class="footer__inner-title">
+                        Need Help? 
+                    </div>
+                    <ul class="footer__menu">
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">
+                                Help Center
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">
+                                Foxtar Market Terms
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">
+                                Author Terms
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">
+                                Foxtar Licenses
+                            </a>
+                        </li>
+                        <li class="footer__menu-item">
+                            <a class="footer__menu-link" href="#">
+                                Contact Us
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="footer__inner-item footer__blog-4">
+                    <div class="footer__inner-title">
+                        Follow Us On
+                    </div>
+                    <div class="footer__box-images">
+                        <a class="footer__box-link" href="#">
+                            <img class="footer__box-img" src="images/src/footer-1.png" alt="">
+                        </a>
+                        <a class="footer__box-link" href="#">
+                            <img class="footer__box-img" src="images/src/footer-2.png" alt="">
+                        </a>
+                        <a class="footer__box-link" href="#">
+                            <img class="footer__box-img" src="images/src/footer-3.png" alt="">
+                        </a>
+                        <a class="footer__box-link" href="#">
+                            <img class="footer__box-img" src="images/src/footer-4.png" alt="">
+                        </a>
+                        <a class="footer__box-link" href="#">
+                            <img class="footer__box-img" src="images/src/footer-5.png" alt="">
+                        </a>
+                    </div>
+                    <div class="footer__form-title">
+                        Newsletter Sign Up!
+                    </div>
+                    <form class="footer__form" action="#">
+                        <input class="footer__form-input" type="text" placeholder="E-mail Address">
+                        <button class="footer__form-button" type="submit"></button>
+                    </form>
+                    
+                </div>
+            </div>
+        </div>
+
+        <div class="footer__bottom">
+            <div class="container">
+                <p class="footer__bottom-text">
+                    © 2017 Foxtar market place. Trademarks and brands are the property of their respective owners.
+                </p>
+            </div>
+        </div>
+
+    </footer>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/slick.min.js"></script>
